# AQS-Indoor

./: .gitignore  AQS Indoor.code-workspace  AQS-Indoor.code-workspace  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
SquareLineStudioProjectFiles/sq_line_SSD1306/: sq_line_ST7789V3.sll  sq_line_ST7789V3.spj
SquareLineStudioProjectFiles/sq_line_ST7789V3/: SquareLine_Project.sll  SquareLine_Project.spj
SquareLineStudioProjectFiles/sq_line_ST7789V3/v1/: SquareLine_Project.sll  SquareLine_Project.spj
SquareLineStudioProjectFiles/sq_line_ST7789V3/ver2/: Waveshare_LDC_172_320_v2.sll  Waveshare_LDC_172_320_v2.spj
components/: README.md
components/a_menu/: Kconfig.projbuild
components/battery_driver/: CMakeLists.txt  Kconfig.projbuild  battery_driver.c
components/battery_driver/include/: battery_driver.h
components/captive_portal/: CMakeLists.txt  Kconfig.projbuild  captive_portal.c
components/captive_portal/include/: captive_portal.h
components/card_driver/: CMakeLists.txt  Kconfig.projbuild  card_driver.c
components/card_driver/include/: card_driver.h
components/display_driver/: CMakeLists.txt  Kconfig.projbuild  display_driver.c
components/display_driver/include/: display_driver.h
components/i2c_driver/: CMakeLists.txt  Kconfig.projbuild  i2c_driver.c
components/i2c_driver/include/: i2c_driver.h
components/led_driver/: CMakeLists.txt  Kconfig.projbuild  led_driver.c
components/led_driver/include/: led_driver.h
components/littlefs_driver/: CMakeLists.txt  Kconfig.projbuild  littlefs_driver.c
components/littlefs_driver/include/: littlefs_driver.h
components/lvgl_driver/: CMakeLists.txt  Kconfig.projbuild  lvgl_driver.c
components/lvgl_driver/include/: lvgl_driver.h
components/ntp_service/: CMakeLists.txt  Kconfig.projbuild  ntp_service.c
components/ntp_service/include/: ntp_service.h
components/sensor_co2/: CMakeLists.txt  Kconfig.projbuild  sensor_co2.c
components/sensor_co2/include/: sensor_co2.h
components/sensor_co2/sensiniron/: sensirion_common.c  sensirion_common.h
components/sensor_temp/: CMakeLists.txt  Kconfig.projbuild  sensor_temp.c
components/sensor_temp/include/: sensor_temp.h
components/sqlite_driver/: CMakeLists.txt  sqlite_driver.c
components/sqlite_driver/include/: sqlite_driver.h
components/ui/: CMakeLists.txt  ui.c  ui_load.c
components/ui/include/: ui.h  ui_load.h
components/ui/sq_line_SSD1306/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/sq_line_SSD1306/components/: ui_comp_hook.c
components/ui/sq_line_SSD1306/images/: ui_img_1346903651.c  ui_img_1409770133.c  ui_img_1528503493.c  ui_img_1836401811.c  ui_img_521089986.c  ui_img_battery_100_x16_png.c  ui_img_battery_10_x16_png.c  ui_img_battery_50_x16_png.c  ui_img_battery_80_x15_png.c  ui_img_battery_80_x16_png.c  ui_img_battery_died_x16_png.c  ui_img_wifi_15px_png.c  ui_img_wifi_ap_x15_png.c
components/ui/sq_line_SSD1306/screens/: ui_Screen1.c
components/ui/sq_line_ST7789V3/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/sq_line_ST7789V3/components/: ui_comp_hook.c
components/ui/sq_line_ST7789V3/images/: ui_img_1680534988.c  ui_img_599688048.c  ui_img_806973588.c  ui_img_air2_x32_png.c  ui_img_batt_85_x32_png.c  ui_img_batt_full_x32_png.c  ui_img_batt_half_less_x32_png.c  ui_img_batt_half_x32_png.c  ui_img_batt_low_x32_png.c  ui_img_danger_x36_png.c  ui_img_humidity4_x32_png.c  ui_img_risk_165_142_png.c  ui_img_signal_x32_png.c  ui_img_warning_x36_png.c  ui_img_wifi_x32_png.c
components/ui/sq_line_ST7789V3/screens/: ui_Screen1.c
components/webserver/: CMakeLists.txt  Kconfig.projbuild  webserver.c
components/webserver/include/: webserver.h
components/wifi/: CMakeLists.txt  Kconfig.projbuild  wifi.c
components/wifi/include/: wifi.h
doc/: README.md  components.md  stats.db
doc/backups/: settings.json
flash_data/: index.html  upload_script.html
flash_sd_card/: index.html
main/: CMakeLists.txt  idf_component.yml  main.c
